<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.liuhui.codex.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_btn1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn1"/>

        <Button
            android:id="@+id/main_btn2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn2"/>

        <Button
            android:id="@+id/main_btn3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn3"/>

        <Button
            android:id="@+id/main_btn4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn4"/>

        <Button
            android:id="@+id/main_btn5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn5"/>

        <Button
            android:id="@+id/main_btn6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn6"/>

        <Button
            android:id="@+id/main_btn7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn7"/>

        <Button
            android:id="@+id/main_btn8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn8"/>

        <Button
            android:id="@+id/main_btn9"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn9"/>

        <Button
            android:id="@+id/main_btn10"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/main_btn10"/>

    </LinearLayout>

</ScrollView>
