<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.liuhui.codex.GlideImageActivity">

    <Button
        android:id="@+id/glide_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/glide_btn1"/>

    <Button
        android:id="@+id/glide_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/glide_btn2"/>

    <Button
        android:id="@+id/glide_btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/glide_btn3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/glide_image1"
            android:layout_width="150dp"
            android:scaleType="centerCrop"
            android:layout_height="100dp"
            android:layout_margin="5dp"/>
        <ImageView
            android:id="@+id/glide_image2"
            android:scaleType="fitXY"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>
